--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -58,15 +58,15 @@ To address this shortcoming, \APE tools can be used.
 They typically use the \LLM itself to determine suitable adjustments or generate new prompts based on a description or training data of the problem~\cite{ramnath2025SystematicSurvey}.
 
 The \LiSSAf proposes an environment for \TLR tasks, including multiple pipeline steps for the preprocessing of input data.
-They harness the power of \LLMs to extract traceability links from a variety of different artifacts, also across multiple domains.
+They harness the power of \LLMs to extract traceability links from a variety of different artifacts, also across multiple tasks.
 My work contributes an \APE component to this framework.
 It can be used to automatically refine a prompt on a dataset.
-The refined prompt can improve \TLR rates, for projects in the \RtR domain, compared to the current classification prompts in use by \LiSSA.
+The refined prompt can improve \TLR rates, for projects in the \RtR task, compared to the current classification prompts in use by \LiSSA.
 
 This thesis aims to answer the following research questions:
 \begin{itemize}
     \item[\textbf{RQ1:}] Can \APE be used to improve \TLR performance in the \LiSSAf?
-    \item[\textbf{RQ2:}] How does the performance of optimized prompts compare to the current \TLR performance in the \RtR domain?
+    \item[\textbf{RQ2:}] How does the performance of optimized prompts compare to the current \TLR performance in the \RtR task?
     \item[\textbf{RQ3:}] Can optimized prompts improve \TLR performance for untrained datasets?
 \end{itemize}
 
