Update on Overleaf.

--- a/preamble.sty
+++ b/preamble.sty
@@ -16,6 +16,7 @@
 \RequirePackage{makecell}
 \RequirePackage{pdflscape}
 \RequirePackage{paralist}
+\RequirePackage{enumitem }
 %%% You need to import/define all below.
 \RequirePackage[theorems, skins, breakable, listings]{tcolorbox}
 \RequirePackage{kit_colors}
