--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -34,11 +34,11 @@ Further complications, such as inconsistent naming, are frequent issues in softw
 We can see various snippets of a larger project, including requirements, source code, architectural diagrams, and documentation.
 For instance, we have the requirement that a \REST \API should be used.
 In the documentation, we can read that \REST is used to process images.
-The source code shows us that the \method{Image} class is used by the \method{\REST Facade}.
+The source code reveals that the \method{Image} class is utilized by the \method{\REST Facade}.
 A \TL exists between the \REST documentation and the \REST requirement.
 Furthermore, the documentation snippet describes the relation between the \method{\REST Facade} and \method{Image}.
 So a \TL exists between them as well.
-We can also note naming inconsistencies for the database.
+We can also note inconsistencies in naming for the database.
 In the architectural diagram, it is referred to as \method{Database}.
 At the same time, the source code uses the abbreviated \method{Db} identifier.
 Technically, with just the knowledge displayed in \autoref{fig:artifact_overview}, we can not even be certain that \method{Db} is used to abbreviate database.
