--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -28,7 +28,7 @@ Their main takeaway is that even minor adjustments, \directQuote[sec. VI]{such a
 They are unable to find a singular generalized optimal prompt to cover all \TLR tasks.
 They manually adjusted prompts for each task to greatly improve recovery rates.
 
-\citewithauthor{zhang2025EnhancingRequirement} use \LLMs to augment \TLR training data through synthetic \Tls.
+\citewithauthor{zhang2025EnhancingRequirement} use \LLMs to augment \TLR training data through synthetic \TLs.
 They are able to achieve superior results compared to encoders trained on the original data only.
 
 \citewithauthor{fuchss2025RetrievalStudya} use small \LLMs instead of \IR based \TL candidate selection.
