--- a/sections/abstract_de.tex
+++ b/sections/abstract_de.tex
@@ -1,35 +1,35 @@
+
 %% LaTeX2e class for student theses
 %% sections/abstract_de.tex
-%%
+%% 
 %% Karlsruhe Institute of Technology
-%% Institute for Program Structures and Data Organization
-%% Chair for Software Design and Quality (SDQ)
+%% Institute of Information Security and Dependability
+%% Software Design and Quality (SDQ)
 %%
 %% Dr.-Ing. Erik Burger
 %% burger@kit.edu
 %%
 %% Version 1.6, 2024-06-07
 %%
-%% Translation by Claude Sonnet 4.5
+%% Translated by Claude Sonnet 4.5
 
 \Abstract
 
-\Ac{TLR} ist eine wichtige Aufgabe im Software Engineering, die dabei hilft, \TLs zwischen verschiedenen Software-Artefakten zu etablieren und zu pflegen.
-Traditionelle \TLR-Methoden basieren häufig auf \IR-Techniken, um Kandidaten-Links zu identifizieren.
-Neuere Ansätze nutzen \LLMs, um die Genauigkeit und Abrufrate von \TLR zu verbessern.
-Um \LLMs jedoch effektiv zu nutzen, ist es entscheidend, geeignete Prompts zu entwerfen.
-Dieser Prozess des Prompt Engineerings ist oft manuell und zeitaufwändig und erfordert erhebliche Expertise.
+\Ac{TLR} ist eine wichtige Aufgabe im Software Engineering, die dabei hilft, \TLs zwischen verschiedenen Softwareartefakten zu etablieren und zu pflegen.
+Traditionelle \TLR-Methoden basieren häufig auf \IR-Techniken, um Kandidatenlinks zu identifizieren.
+Neuere Ansätze verwenden \LLMs, um die Genauigkeit und Rückgewinnungsraten von \TLR zu verbessern.
+Um \LLMs jedoch effektiv zu nutzen, ist es entscheidend, geeignete Prompts zu entwickeln.
+Dieser Prozess des Prompt Engineering wird oft manuell durchgeführt und ist häufig zeitaufwändig, da er erhebliche Expertise erfordert.
 
-In dieser Arbeit wird ein \APE-Ansatz vorgeschlagen, um den Prompt-Engineering-Prozess für \TLR-Aufgaben im \LiSSAF zu automatisieren.
-\Acp{LLM} werden verwendet, um Prompts iterativ zu verfeinern, mit der Fähigkeit, Feedback aus vorherigen Iterationen zu berücksichtigen.
-Der Ansatz wird auf fünf Datensätzen aus dem \RtR-Bereich unter Verwendung von drei verschiedenen \LLMs evaluiert.
-Als Baseline werden aktuelle Klassifikations-Prompts aus dem \LiSSAF verwendet.
+In dieser Arbeit wird ein \APE-Ansatz vorgeschlagen und realisiert, um diese Aufgabe für \TLR im \LiSSAF zu automatisieren.
+Unter Verwendung von Feedback aus vorherigen Iterationen werden \LLMs eingesetzt, um Prompts zu verfeinern.
+Der Ansatz wird auf fünf Datensätzen aus der \RtR-Aufgabe unter Verwendung von drei verschiedenen \LLMs evaluiert.
+Als Baseline werden aktuelle Klassifikationsprompts aus dem \LiSSAF verwendet.
 
-Die Ergebnisse zeigen, dass der vorgeschlagene Ansatz die Leistung von \TLR-Aufgaben leicht verbessern kann.
-Die Verbesserungen sind jedoch nicht so signifikant wie zunächst erwartet.
-Darüber hinaus wird gezeigt, dass der einzelne, am besten abschneidende optimierte Prompt für einen Datensatz auch auf anderen Datensätzen derselben Domäne gut funktioniert.
-Insgesamt trägt diese Arbeit zum Bereich der \TLR bei, indem sie einen Ansatz zum \APE unter Verwendung von \LLMs vorschlägt.
-Auch wenn der \APE-Ansatz nicht angewendet wird, können in weiteren Arbeiten die durch diese Arbeit erzielten optimierten Prompts als feste Klassifikations-Prompts verwendet werden.
-Dieser Prozess kann mit Evaluierungen im \LiSSAF für kontinuierliche Verbesserung verkettet werden.
+Die Ergebnisse zeigen, dass der realisierte Ansatz die Leistung von \TLR-Aufgaben verbessern kann.
+Darüber hinaus wird demonstriert, dass der leistungsstärkste optimierte Prompt für einen Datensatz, gemessen am \fone, auch auf anderen Datensätzen derselben Aufgabe gut funktioniert.
+Da die durch diese Arbeit erzielten optimierten Prompts als feste Klassifikationsprompts verwendet werden können, muss der \APE-Algorithmus nicht für jede Evaluierung angewendet werden.
+Insgesamt trägt diese Arbeit zum Feld von \TLR bei, indem ein Ansatz für \APE unter Verwendung von \LLMs realisiert wird.
 
-Weitere Forschung kann durchgeführt werden, um weitere konfigurierbare Einstellungen zu untersuchen und den \APE-Ansatz auf anderen \TLR-Domänen zu evaluieren.
+Weitere Forschung kann durchgeführt werden, um mehr Freiheitsgrade für die \APE-Algorithmen zu erforschen.
+Der \APE-Ansatz kann auch in anderen \TLR-Domänen, mit verschiedenen Modellen und neuen Prompting-Strategien untersucht werden.
