chore: build svg to pdf

--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -18,7 +18,7 @@ This can be achieved by chaining multiple requests to a \LLM~\cite{long2023Large
 
 \begin{figure}
     \centering
-    \includesvg[width=\linewidth]{graphics/tree_of_thought}
+    \includegraphics{graphics/tree_of_thought.drawio}
     \caption{\Ac{ToT} visualization inspired by \citewithauthor{yao2023TreeThoughts}}
     \label{fig:ToT_visualization}
     Highlighted in green are different prompting techniques.
